# uv-fasthtml

./: .editorconfig  .gitignore  Caddyfile  README.md  alembic.ini  compose.yaml  docker-compose.yaml  main.py  pyproject.toml  run
.github/workflows/: census-tools.yml  uv-fasthtml.yml
app/: alert.py  beforeware.py  components.py  config.py  database.py  exceptions.py  icons.py  main.py  utils.py
app/auth/: discord.py  email.py  github.py  google.py  utils.py
app/db/: database.py
app/db/migrations/: 0000-init.sql  0001-logbook.sql  0002-users.sql  0003-logbook.sql  0004-github-users.sql  0005-add-user-notes.sql  0006-drop-logbook.sql
app/models/: logbook.py  models.py  shout.py  system.py  user_notes.py  users.py
app/pages/: admin.py  home.py  logbook.py  login.py  register.py  shout.py
app/routes/: admin.py  auth.py  base.py  health.py  home.py  logbook.py  protected.py  shout.py  static.py
app/tests/: test_shout.py
migrations/: env.py  script.py.mako
migrations/versions/: 18d079fc67cc_add_indexes_to_users_and_usernotes.py  2c93f737c2d1_init.py  4715e91f2e09_test.py  c2e7a4e9eccf_add_foreign_key_to_user_notes.py
reverse-proxy/: nginx.conf
scripts/: deploy
static/: styles.css
tests/: conftest.py
tests/e2e/: test_home.py
tests/integration/: conftest.py  test_admin.py  test_auth.py  test_health.py  test_home.py  test_logbook.py  test_protected.py  test_static.py  utils.py
tests/unit/: test_log_model.py  test_utils.py
tests/unit/auth/: test_auth_utils.py
tests/unit/models/: test_log_model.py  test_user_notes.py  test_users.py
