[project]
name = "uv-fasthtml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "python-fasthtml>=0.12.21",
]

[tool.pytest.ini_options]
pythonpath = [
    ".", "app"
]

[tool.pyright]
include = ["app"]
exclude = [
    "**/__pycache__",
]
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
venvPath = ".venv"

[tool.ruff.lint]
ignore = ["E701"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.13.2",
]
